--- a/course/test/src/CMakeLists.txt
+++ b/course/test/src/CMakeLists.txt
@@ -5,7 +5,7 @@ include_directories(
 
 # Test sources.
 set (GTEST_SOURCES
-	foo_TEST.cc
+	isometry_TEST.cc
 )
 
 cppcourse_build_tests(${GTEST_SOURCES})
