--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,7 +7,7 @@ ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get update && apt-get install -y \
 	sudo \
 	git \
-    mercurial \
+	mercurial \
 	build-essential \
 	vim \
 	openssh-server \
@@ -15,10 +15,19 @@ RUN apt-get update && apt-get install -y \
 	bash-completion \
 	debian-keyring \
 	debian-archive-keyring \
-    curl \
-    cmake \
-    python3 \
-    tmux
+	curl \
+	cmake \
+	python3 \
+	tmux
+
+RUN apt-get update && apt-get install -y \
+	clang \
+	clang-format \
+	clang-tidy \
+	python3-pip \
+	cppcheck
+
+RUN pip3 install cpplint
 
 RUN mkdir /course
 WORKDIR /course
