--- a/course/test/src/CMakeLists.txt
+++ b/course/test/src/CMakeLists.txt
@@ -6,6 +6,7 @@ include_directories(
 # Test sources.
 set (GTEST_SOURCES
 	isometry_TEST.cc
+	vector3_TEST.cc
 )
 
 cppcourse_build_tests(${GTEST_SOURCES})
