Matrix3 full tests
Signed-off-by: lobotuerk <jtlorente@ekumenlabs.com>

--- a/course/test/src/CMakeLists.txt
+++ b/course/test/src/CMakeLists.txt
@@ -7,6 +7,7 @@ include_directories(
 set (GTEST_SOURCES
 	isometry_TEST.cc
 	vector3_TEST.cc
+	matrix3_TEST.cc
 )
 
 cppcourse_build_tests(${GTEST_SOURCES})
