Added Matrix3 abstraction and tests. Changed Vector3 implementation to use std::vector<double>.

--- a/course/test/src/CMakeLists.txt
+++ b/course/test/src/CMakeLists.txt
@@ -6,6 +6,7 @@ include_directories(
 # Test sources.
 set (GTEST_SOURCES
 	vector3_TEST.cc
+	matrix3_TEST.cc
 )
 
 cppcourse_build_tests(${GTEST_SOURCES})
